syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message ChangePasswordRequest {
    string username = 1;
    string current_password = 2;
    string new_password = 3;
}

message ChangePasswordResponse {
    User user = 1; 
}