syntax = "proto3";

package pb;

option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message VerifyEmailRequest {
    // int64 email_id = 1;
    string username = 1;
    int64 secret_code = 2;
}

message VerifyEmailResponse {
    bool is_verified = 1;
}